[package]
name = "icloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2"
hyper = "0.14"
hyper-rustls = "0.23"
futures = "0.3"
chrono = "0.4"
tokio = { version = "1.16", features = ["full"] } 
